correct spacing for power

--- a/waybar-style.css
+++ b/waybar-style.css
@@ -73,6 +73,7 @@ button:hover {
 #network,
 #pulseaudio,
 #custom-media,
+#custom-power,
 #tray,
 #mode,
 #idle_inhibitor,
